Add JavaFX setup guide to README
Added detailed JavaFX setup instructions for the project, including version checks and troubleshooting tips.